--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
     height: 40px;
 }
 .botonuwu{
-    background-color: #FFC692;
+    background-color: #FACB4B;
     font-size: 20px;
     width:200px;
     bottom: 10px;
@@ -41,7 +41,7 @@
         background-color: rgb(255, 223, 177);
 }
 .botonuwu-sandias{
-    background-color: #FFB0B0;
+    background-color: #FE8D8D;
     font-size: 20px;
     width:200px;
     bottom: 10px;
